--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# playwright
+/playwright-report
+/test-results
+
+
 # dependencies
 /node_modules
 /.pnp
