--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,19 +5,18 @@ on:
     branches: [master, develop]
   workflow_dispatch: # 手動実行用
 
-# 権限設定を追加
 permissions:
   contents: read
-  pull-requests: write # PRへのコメント追加に必要
+  pull-requests: write
 
 jobs:
   test:
     name: "Playwright Tests"
     runs-on: ubuntu-latest
-    timeout-minutes: 30
     container:
       image: mcr.microsoft.com/playwright:v1.51.1-noble
-      
+    timeout-minutes: 30
+
     steps:
       - uses: actions/checkout@v4
 
@@ -29,6 +28,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # アプリケーションサーバーを起動
+      - name: Build and start the application
+        run: |
+          npm run build
+          npm run start & 
+          # バックグラウンドで起動し、次のステップに進む
+          sleep 10 # アプリケーションの起動を待つ
+
       - name: Run Playwright tests
         id: playwright
         run: |
@@ -37,6 +44,8 @@ jobs:
           echo "date=$(date)" >> $GITHUB_OUTPUT
         env:
           CI: true
+          # テスト用の環境変数を設定
+          PLAYWRIGHT_TEST_BASE_URL: http://localhost:3000
 
       - name: Upload test results
         if: always()
