fix: CI環境でのテスト実行設定を修正

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Build and start the application
         run: |
           npm run build
-          npm run start & 
-          sleep 10
+          npm run start -- -p 9999 & 
+          sleep 30
 
       - name: Run Playwright tests
         id: playwright
@@ -42,7 +42,7 @@ jobs:
           echo "date=$(date)" >> $GITHUB_OUTPUT
         env:
           CI: true
-          PLAYWRIGHT_TEST_BASE_URL: http://localhost:3000
+          PLAYWRIGHT_TEST_BASE_URL: http://localhost:9999
 
       - name: Upload test results
         if: always()
