--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: E2E Tests
 
 on:
   pull_request:
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   test:
-    name: "Playwright Tests"
+    name: "E2E Tests"
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.51.1-noble
@@ -34,10 +34,10 @@ jobs:
           npm run start -- -p 9999 & 
           sleep 30
 
-      - name: Run Playwright tests
+      - name: Run E2E tests
         id: playwright
         run: |
-          npx playwright test src/app/login/login.spec.ts --project=chromium-headless
+          npx playwright test src/app/login/login.spec.ts --project=firefox-headless
           echo "status=$?" >> $GITHUB_OUTPUT
           echo "date=$(date)" >> $GITHUB_OUTPUT
         env:
