--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,27 +10,42 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.51.1-jammy
     steps:
       - uses: actions/checkout@v4
-
-      - name: Bunのセットアップ
-        uses: oven-sh/setup-bun@v1
+      - uses: actions/setup-node@v4
         with:
-          bun-version: latest
+          node-version: lts/*
+          cache: 'npm'
+        # キャッシュパスを明示的に指定
+          cache-dependency-path: '**/package-lock.json'
 
       - name: 依存関係のインストール
-        run: bun install
+        run: npm ci
 
-      - name: Playwright ブラウザのインストール
-        run: bunx playwright install --with-deps
+      # 環境変数を設定ファイルに書き出し
+      - name: 環境変数の設定
+        run: |
+          echo "PORT=3000" > .env.local
+          echo "HOST=localhost" >> .env.local
+          echo "環境変数を設定しました:"
+          cat .env.local
+
+      - name: テスト環境の起動
+        run: |
+          # ホストを 0.0.0.0 に設定して、すべてのネットワークインターフェースでリッスン
+          # サーバーを起動し、バックグラウンドで実行
+          nohup npm run dev --hostname=0.0.0.0 > nohup.out 2>&1 &
+          echo "Webサーバーを起動しました"
 
       - name: Playwright テストの実行
-        run: bun run test
+        run: |
+          # テスト実行時にベースURLを明示的に指定
+          npm run test:chrome-headless -- --timeout=60000
         env:
-          # テストに必要な環境変数があれば追加
+          # テストに必要な環境変数
           NODE_ENV: test
-
-      # テストが失敗してもレポートをアップロード (テストがキャンセルされた場合は除く)
       - name: HTMLレポートをアーティファクトとしてアップロード
         if: ${{ !cancelled() }}
         uses: actions/upload-artifact@v4
@@ -38,9 +53,6 @@ jobs:
           name: playwright-report-${{ github.run_id }}
           path: playwright-report/
           retention-days: 30
-          
-      # プライベートリポジトリの場合、アーティファクトはリポジトリにアクセスできるユーザーのみが閲覧可能です
-      # テスト結果と詳細情報をコメントとして追加
       - name: テスト結果をPRコメントとして追加
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
@@ -49,7 +61,7 @@ jobs:
           script: |
             const fs = require('fs');
             try {
-              // テスト結果のサマリーを読み込む（ファイルパスは実際の出力に合わせて調整してください）
+              // テスト結果のサマリーを読み込む
               let summary = '';
               if (fs.existsSync('./playwright-report/results.json')) {
                 const results = JSON.parse(fs.readFileSync('./playwright-report/results.json', 'utf8'));
