fix: GitHub ActionsでのFirefoxテスト実行時のHOME環境変数を設定

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -43,6 +43,7 @@ jobs:
         env:
           CI: true
           PLAYWRIGHT_TEST_BASE_URL: http://localhost:9999
+          HOME: /root
 
       - name: Upload test results
         if: always()
