--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,7 +2,7 @@ name: E2E Tests
 
 on:
   pull_request:
-    branches: [master, develop]
+    branches: [master, develop, develop-action-test]
   workflow_dispatch: # 手動実行用
 
 permissions:
