--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "playwright test",
-    "test:headed": "playwright test --headed",
+    "test": "playwright test --project=chromium-headless",
+    "test:headed": "playwright test --project=chromium-headless --headed",
     "test:ui": "playwright test --ui",
     "test:chrome-headless": "playwright test --project=chromium-headless",
     "test:firefox-headless": "playwright test --project=firefox-headless",
