--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,11 @@ on:
   # 手動実行用のトリガー
   workflow_dispatch:
 
+# GitHub Tokenに必要な権限を追加
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   test:
     timeout-minutes: 60
